# aihub-korea-metadata-scout

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run.sh
.agents/: COMMIT_RULES.md
.agents/skills/aihub-metadata-repo/: SKILL.md
.agents/skills/aihub-smoke-test/: SKILL.md
data/normalized/: catalog.json
data/normalized/datasets/: 86.json  88.json
docs/: README.md  architecture.md  cli.md  data-artifacts.md  development.md  parsing-and-scoring.md  smoke-tests.md
scripts/: bootstrap_aihubshell.sh  doctor.sh  run_scan.sh
src/aihub_korea_metadata_scout/: __init__.py  cli.py  config.py  logging.py  models.py
src/aihub_korea_metadata_scout/pipeline/: __init__.py  build_catalog.py  generate_markdown.py  inspect_dataset.py  list_datasets.py  search_datasets.py
src/aihub_korea_metadata_scout/scoring/: __init__.py  business_analysis.py  heuristics.py
src/aihub_korea_metadata_scout/shell/: __init__.py  install.py  parser.py  wrapper.py
src/aihub_korea_metadata_scout/storage/: cache.py  json_store.py  markdown_store.py
src/aihub_korea_metadata_scout/templates/: dataset_brief.md.j2
tests/: test_cli.py  test_config.py  test_markdown_generation.py  test_models.py  test_parser.py  test_scoring.py  test_search.py
tests/fixtures/detail/: 593.txt  86.txt  88.txt  not_found.txt  notice.txt
tests/fixtures/list/: sample_list.txt
